--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,26 @@
+allure-pytest==2.14.3
 allure-python-commons==2.14.3
+annotated-types==0.7.0
+attrs==25.3.0
+certifi==2025.6.15
+charset-normalizer==3.4.2
+colorama==0.4.6
+execnet==2.1.1
+Faker==37.4.0
+idna==3.10
+iniconfig==2.1.0
+packaging==25.0
+pluggy==1.6.0
+polyfactory==2.22.0
 pydantic==2.11.7
+pydantic_core==2.33.2
+Pygments==2.19.2
 pytest==8.4.1
+pytest-mock==3.14.1
+pytest-xdist==3.8.0
 requests==2.32.4
-polyfactory~=2.22.0
-Faker~=37.4.0
+requests-mock==1.12.1
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+tzdata==2025.2
+urllib3==2.5.0
